alteraçao pra logomarca

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <aside class="menu">
         <div class="main-content menu-content">
         <h1 onclick="getElementById('close-menu').checked = false";> 
-            <a href="#home">Logo</a>
+            <a href="#home">Logomarca</a>
         </h1>
         <nav>
             <ul onclick="getElementById('close-menu').checked = false";>
